--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,9 @@ spring:
 
 server:
   port: 8055
-
+---
+spring:
+  datasource:
+    url: jdbc:mysql://localhost/easybank?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    username: root
+    password: 1234
